# inception-search-demo

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cuda  Makefile  README.md  TODO.md  docker-compose.gpu.yml  docker-compose.yml  package.json  start-inception.sh  test-docker-stack.sh  tsconfig.json
backup/client/: benchmark-format.md
backup/client/src/: pdf-utils.ts  rename-to-hash.ts  test-search.ts
backup/doctor/: .gitignore  CHANGELOG.md  DEVELOPING.md  README.md  compose.yaml  pyproject.toml
backup/doctor/.github/workflows/: deploy.yml  lint.yml  tests.yml
backup/doctor/docker/: Dockerfile
backup/doctor/doctor/: forms.py  tasks.py  tests.py  views.py
backup/doctor/doctor/test_assets/: 1.rm  broken_html.html  broken_html.txt  small.xml
backup/inception/: LICENSE  Makefile  README.md  docker-entrypoint.sh  mypy.ini
backup/inception/inception/: embedding_service.py  schemas.py
backup/inception/inception/routes/: __init__.py  embedding.py  monitoring.py
backup/inception/tests/: test_monitoring.py
backup/inception/tests/test_data/: sample_opinion.txt
client/: Dockerfile  package.json
client/files/: 20060421 Complaint Parrish Medley vs Jan Wallace Re Davi Skin_ocr.md  filename-mapping.json  sample.txt
client/src/: api.ts  benchmark-utils.ts  benchmark.ts  index.ts  types.ts
converter/: Dockerfile  convert.py  convert_hunyuan_ocr.py  pyproject.toml  server.py
demo/: Dockerfile  package.json
demo/src/: index.ts
inception/: Dockerfile  docker-compose.dev-gpu.yml  docker-compose.dev.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
inception/inception/: config.py  main.py  metrics.py  utils.py
inception/tests/: conftest.py  test_embedding_service.py
models/: registry.json
python-gpu-service/: Dockerfile  requirements.txt
python-gpu-service/src/: config.py  convert_models.py  embedding_service.py  embedding_service_torch.py  main.py
scripts/: benchmark.sh  check-models.sh  clean.sh  setup.sh  startup.sh  test-all.sh
src/: cli.ts  index.ts
src/services/: config.ts  embedding.ts  hardware.ts  index.ts  logger.ts  metrics.ts  model-loader.ts
src/services/ocr/: hunyuan.ts  index.ts  mistral.ts
src/types/: index.ts
tests/: test-docker-stack.sh  test-mistral-ocr.ts  test-ocr.ts
vllm/: .env.example  CHANGELOG.md  Dockerfile.client  Dockerfile.monitor  Makefile  README.md  TODO.md  docker-compose.spark-1.yml  docker-compose.spark-2.yml  docker-compose.spark2.yml  docker-compose.yml
vllm/client/: CHANGELOG.md  Dockerfile  README.md  TODO.md  package.json
vllm/client/src/: cot-demo.ts  demo.ts  index.ts  ocr-pipeline.ts  stress-test.ts  verify-demo.ts
vllm/scripts/: hydra-down.sh  hydra-monitor.sh  hydra-start.sh  hydra-up.sh  monitor-entrypoint.sh  monitor.sh  pull-images-spark2.sh  run-demo.sh  start-cluster.sh  stop-cluster.sh  sync-spark2.sh  test-hydra-stack.sh  verify-services.sh
vllm/traefik/: dynamic.yml  traefik.yml
