[project]
name = "inception-converter"
version = "1.0.0"
description = "ONNX model converter for Inception"
requires-python = ">=3.12"

dependencies = [
    "optimum[exporters]>=1.24.0",
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
